# Competitive_Analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/competitive_analysis/: __init__.py  cli.py  config.py  exporters.py  models.py
src/competitive_analysis/analyzers/: __init__.py  base.py  news.py  seo.py  social.py  web.py
tests/: test_models.py
