[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "competitive-analysis"
version = "0.1.0"
description = "CLI tool for comprehensive competitor analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
compete = "competitive_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
